--- a/metadata.desktop
+++ b/metadata.desktop
@@ -4,13 +4,16 @@ Comment=Breeze-Noir-Dark Plasma Theme
 X-KDE-PluginInfo-Author=l4k1
 X-KDE-PluginInfo-Email=l4k1987@gmail.com
 X-KDE-PluginInfo-Name=Breeze-Noir-Dark
-X-KDE-PluginInfo-Version=5.3
+X-KDE-PluginInfo-Version=5.4
 X-KDE-PluginInfo-Website=
 X-KDE-PluginInfo-Category=Plasma Theme
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPLv3
 X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-API=5.0
+
+[AdaptiveTransparency]
+enabled=true
 
 [ContrastEffect]
 enabled=false
