--- a/Breeze-Noir-Dark Plasma Theme/metadata.desktop
+++ b/Breeze-Noir-Dark Plasma Theme/metadata.desktop
@@ -4,7 +4,7 @@ Comment=Breeze-Noir-Dark Plasma Theme
 X-KDE-PluginInfo-Author=l4k1
 X-KDE-PluginInfo-Email=l4k1987@gmail.com
 X-KDE-PluginInfo-Name=Breeze-Noir-Dark
-X-KDE-PluginInfo-Version=14.9
+X-KDE-PluginInfo-Version=15.0
 X-KDE-PluginInfo-Website=
 X-KDE-PluginInfo-Category=Plasma Theme
 X-KDE-PluginInfo-Depends=
@@ -20,3 +20,6 @@ enabled=false
 contrast=0.2
 intensity=0.4
 saturation=1.7
+
+[BlurBehindEffect]
+enabled=true
