--- a/Breeze-Noir-Dark Plasma Theme/metadata.desktop
+++ b/Breeze-Noir-Dark Plasma Theme/metadata.desktop
@@ -4,8 +4,8 @@ Comment=Breeze-Noir-Dark Plasma Theme
 X-KDE-PluginInfo-Author=l4k1
 X-KDE-PluginInfo-Email=l4k1987@gmail.com
 X-KDE-PluginInfo-Name=Breeze-Noir-Dark
-X-KDE-PluginInfo-Version=18.5
-X-KDE-PluginInfo-Website=
+X-KDE-PluginInfo-Version=18.6
+X-KDE-PluginInfo-Website=https://github.com/L4ki/Breeze-Noir-Dark
 X-KDE-PluginInfo-Category=Plasma Theme
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPLv3
